fixing h-100 overflow bug

--- a/client/src/components/BackgroundBokke/BackgroundBokke.css
+++ b/client/src/components/BackgroundBokke/BackgroundBokke.css
@@ -1,13 +1,20 @@
-body {
-    margin: 0;
+/* .mainCapture {
+    max-height: 100vh;
+    max-width:100vw;
     overflow: hidden;
-  }
+    float: none;
+     position: absolute; 
+  } */
   
   .background {
     width: 100vw;
-    /* height: 100vh; */
+    height: 100vh;
     background: #fff;
     z-index: -1;
+    position: absolute;
+    overflow:hidden;
+    float: none;
+    bottom: .001vh;
   }
   
   .background span {
